partners, kontakt form php

--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
     <div class="partners-item"><a href="https://www.kuberg.com/en" target="_blank"><img src="img/partners/kuberg.png" alt="" class="partner-logo"></a></div>
     <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/moto.png" alt=""class="partner-logo"></a></div>
     <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/uax.png" alt="" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/ouleha.png" alt="" class="partner-logo"></a></div>
     <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/hobby.png" alt="" class="partner-logo"></a></div>
     <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/hearts.png" alt="" class="partner-logo"></a></div>
+    
 </div>
 <!--PARTNERS-->
 
