--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FREEmotoSTYLEacademy</title>
-    <meta name="author" content="alexhatal.com">
+    <meta name="author" content="divavirtualagency.com">
     <meta name="description" content="">
-    <meta name="keywords" content="logo design, graphic dsign, grafika, grafický dizajn, web, web stránky, web page, web development, kódování, koding, vývoj webu, firemní identita, vizitky, strategie,marketing">
-    <meta property="og:title" content="Grafický dizajn a web development">
+    <meta name="keywords" content="motorky,motocross, motorkářské události, adrenalinové zážitky,elektro-motorky, kuberg, bazar motorek, servis motorek, motorky pro deti, škola, FMX">
+    <meta property="og:title" content="Adrenalinové zážitky na motorkách">
     <meta property="og:description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte. Ráda zhmotním Vaše představy.">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
