--- a/kontakt.html
+++ b/kontakt.html
@@ -88,12 +88,9 @@
     <div class="header">
       <h2>Napište nám!</h2>
       <p>Po odeslání formuláře se Vám brzy ozveme</p>
-     <svg version="1.1" id="Layer"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 113 120" xml:space="preserve" preserveAspectRatio="none">
-  <style type="text/css">
-      .st0{fill:  #fff;}
-  </style>
-  <g>
+      <svg version="1.1" id="Layer"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      viewBox="0 0 113 120" xml:space="preserve" preserveAspectRatio="none">
+   <g>
       <path class="st0" d="M93.8,87.4c16.7-28.2,23.9-51,11.5-70.9C100.1,8.2,92.4,4.3,84,2.7c6.1,12.9,6.3,28.3-0.4,41.7
           c5,2.6,8.3,7.9,8.3,13.9c0,8.7-7,15.7-15.7,15.7c-4.3,0-8.2-1.7-11.1-4.6l-19,14.8c0.7,1.4,0.4,3.1-0.9,4.1l-4,3.1
           c-1.4,1.1-3.5,0.8-4.5-0.6l-0.1-0.1c-1.1-1.4-0.8-3.5,0.6-4.5l4-3.1c1.3-1,3-0.9,4.2,0.2l18.9-14.8c-2.4-2.8-3.8-6.4-3.8-10.3
@@ -108,7 +105,7 @@
   
     </div>
    
-    <form action="form.php" class="form-wrap" id="md-form" autocomplete="on" method="POST">
+    <form action="https://formspree.io/f/xwkabjlb" class="form-wrap" id="md-form" autocomplete="on" method="POST">
       <div class="input-wrap">
   
         <i class="fas fa-user-alt" class="material-icons" id="form-icon"></i>
@@ -160,23 +157,25 @@
       </div>
   
       <div class="input-wrap">
-        <button id="confirm" type="submit">Odeslat</button>
+        <button id="confirm" type="submit" name="submit">Odeslat</button>
       </div>
+
+
   
     </form>
   
+
+    <!-- end of ending -->
     <div class="ending">
       <div>
         <i class="material-icons">check</i>
       </div>
-  
       <div>
         <h2>Your Message has been sent successfuly</h2>
       </div>
+
   
     </div>
-    <!-- end of ending -->
-  
   </div>
   <!-- end of Card -->
 
@@ -303,7 +302,6 @@
 
 <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i></button>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/8c5ffe8f98.js" crossorigin="anonymous"></script>
 <script src="js.js"></script>
 
