--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>FREEmotoSTYLEacademy</title>
     <meta name="author" content="divavirtualagency.com">
     <meta name="description" content="">
-    <meta name="keywords" content="motorky,motocross, motorkářské události, adrenalinové zážitky,elektro-motorky, kuberg, bazar motorek, servis motorek, motorky pro deti, škola, FMX">
-    <meta property="og:title" content="Adrenalinové zážitky na motorkách">
-    <meta property="og:description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte. Ráda zhmotním Vaše představy.">
+    <meta name="keywords" content="motorky,motocross, motorkářské události, adrenalinové zážitky,elektro-motorky, kuberg, bazar motorek, servis motorek, motorky pro deti, škola, FMX show">
+    <meta property="og:title" content="Adrenalinové zážitky na motorkách. Motorkářske události">
+    <meta property="og:description" content="Chcete zažít adrenalinový zážitek na motorce, koupit či opravit motorku nebo chcete naučit jezdit na motorce sebe či svoje dítě? Free moto style academy je to pravé místo pro Vás.">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -62,8 +62,8 @@
 
     <div class="social">
         <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank"><i class="fab fa-facebook-square"></i></a>
-        <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" target="blank" ><i class="fab fa-youtube"></i></a>
+        <a href="https://www.instagram.com/freemotostyle_academy/" target="blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCHFQ3DMg3FA1TqfeQ-O5eLg" target="blank" ><i class="fab fa-youtube"></i></a>
         <h2 class="hash">#JEZDISNAMI - #RIDEWITHUS / #LITEJSNAMI - #FLYWITHUS</h2>
     </div><br>
 
@@ -132,11 +132,11 @@
 <!--PARTNERS-->
 <div class="partners">
     <div class="partners-item"><a href="https://www.kuberg.com/en" target="_blank"><img src="img/partners/kuberg.png" alt="" class="partner-logo"></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/moto.png" alt=""class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.mototrade.cz/cz/" target="_blank"><img src="img/partners/moto.png" alt=""class="partner-logo"></a></div>
     <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/uax.png" alt="" class="partner-logo"></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/ouleha.png" alt="" class="partner-logo"></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/hobby.png" alt="" class="partner-logo"></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/hearts.png" alt="" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.oulehla.cz/" target="_blank"><img src="img/partners/ouleha.png" alt="" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.hobynaradi.cz/" target="_blank"><img src="img/partners/hobby.png" alt="" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://m.facebook.com/heartofriders/ " target="_blank"><img src="img/partners/hearts.png" alt="" class="partner-logo"></a></div>
     
 </div>
 <!--PARTNERS-->
