--- a/kontakt.html
+++ b/kontakt.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FREEmotoSTYLEacademy</title>
-    <meta name="author" content="alexhatal.com">
-    <meta name="description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte.">
-    <meta name="keywords" content="logo design, graphic dsign, grafika, grafický dizajn, web, web stránky, web page, web development, kódování, koding, vývoj webu, firemní identita, vizitky, strategie,marketing">
-    <meta property="og:title" content="Grafický dizajn a web development">
-    <meta property="og:description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte. Ráda zhmotním Vaše představy.">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FREEmotoSTYLEacademy</title>
+  <meta name="author" content="divavirtualagency.com">
+  <meta name="description" content="">
+  <meta name="keywords" content="motorky,motocross, motorkářské události, adrenalinové zážitky,elektro-motorky, kuberg, bazar motorek, servis motorek, motorky pro deti, škola, FMX show">
+  <meta property="og:title" content="Adrenalinové zážitky na motorkách. Motorkářske události">
+  <meta property="og:description" content="Chcete zažít adrenalinový zážitek na motorce, koupit či opravit motorku nebo chcete naučit jezdit na motorce sebe či svoje dítě? Free moto style academy je to pravé místo pro Vás.">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -70,9 +70,8 @@
     
     <div class="info-social">
         <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank"><i class="fab fa-facebook-square"></i></a>
-        <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" target="blank"><i class="fab fa-youtube"></i></a>
-        <a href="#" target="blank"><i class="fab fa-twitter-square"></i></a><br>
+        <a href="https://www.instagram.com/freemotostyle_academy/" target="blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCHFQ3DMg3FA1TqfeQ-O5eLg" target="blank"><i class="fab fa-youtube"></i></a><br>
     </div>
 
     <h3 class="info-hash">#JEZDISNAMI - #RIDEWITHUS<br>#LITEJSNAMI - #FLYWITHUS</h3>
@@ -208,9 +207,9 @@
             <div class="person-social">
                 <p>Vojtěch Bělunek</p>
                 <p class="position">majitel, jednatel</p>
-                <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank" class="person-social"><i class="fab fa-facebook-square"></i></a>
-                <a href="#" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
-                <a href="#" target="blank" class="person-social"><i class="fab fa-youtube" ></i></a>
+                <a href="https://www.facebook.com/vojta.belunek" target="blank" class="person-social"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/vojtabelunek/" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
+                <a href="https://www.youtube.com/channel/UCHFQ3DMg3FA1TqfeQ-O5eLg" target="blank" class="person-social"><i class="fab fa-youtube" ></i></a>
             </div>
         </div>
         </div>
@@ -237,7 +236,7 @@
             <div class="person-social">
                 <p>Milan Dzimbaník</p>
                 <p class="position">majitel, jednatel</p>
-                <a href="#" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
+                <a href="https://www.instagram.com/milanbanik/" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
             </div>
         </div>
     </div>
