--- a/motorky.html
+++ b/motorky.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FREEmotoSTYLEacademy</title>
-    <meta name="author" content="alexhatal.com">
-    <meta name="description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte.">
-    <meta name="keywords" content="logo design, graphic dsign, grafika, grafický dizajn, web, web stránky, web page, web development, kódování, koding, vývoj webu, firemní identita, vizitky, strategie,marketing">
-    <meta property="og:title" content="Grafický dizajn a web development">
-    <meta property="og:description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte. Ráda zhmotním Vaše představy.">
+    <meta name="author" content="divavirtualagency.com">
+    <meta name="description" content="">
+    <meta name="keywords" content="motorky,motocross, motorkářské události, adrenalinové zážitky,elektro-motorky, kuberg, bazar motorek, servis motorek, motorky pro deti, škola, FMX show">
+    <meta property="og:title" content="Adrenalinové zážitky na motorkách. Motorkářske události">
+    <meta property="og:description" content="Chcete zažít adrenalinový zážitek na motorce, koupit či opravit motorku nebo chcete naučit jezdit na motorce sebe či svoje dítě? Free moto style academy je to pravé místo pro Vás.">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
