--- a/novinky.html
+++ b/novinky.html
@@ -59,8 +59,8 @@
     <p class="bazar-descp">Nenechte si ujít ty nejlepší motorkářské akce v České republice. Pravidelně Vás budeme informovat o událostech a novinkách ze světa motorek tady,nebo na našich sociálních sítích</p>
     <div class="news-social">
         <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank"><i class="fab fa-facebook-square"></i></a>
-        <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" target="blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.instagram.com/freemotostyle_academy/" target="blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCHFQ3DMg3FA1TqfeQ-O5eLg" target="blank"><i class="fab fa-youtube"></i></a>
     </div>
     
 
@@ -73,7 +73,7 @@
     </div>
     <div class="news-item">
         <div class="news-descp">
-            <h2>Name of event</h2>
+            <h2>Heipark Tošovice</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, nisi quia. Fugiat repellendus dolor itaque libero saepe facere, earum quam? Accusamus fuga sequi enim beatae officia? Eligendi quibusdam vitae iste? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum voluptatibus explicabo voluptates? Sunt debitis molestiae at praesentium fugiat perferendis molestias, cumque quis excepturi, animi natus quas laudantium perspiciatis, repellendus quod?</p>
             <a href="" target="_blank" class="news-btn">Link to event</a>
         </div>
@@ -89,19 +89,19 @@
         <div class="card">
             <div class="imgBx ">
                 <img src="img/pic1.jpg">
-                <h3 class="moto-name">Den čisté dopravy, Hradec nad Moravicí</h3>
-                <p>vedle železniční stanice</p>
-                <p>Datum konání: 18.9.2021 </p>
+                <h3 class="moto-name">Heipark Tošovice</h3>
+                <p>Tošovice</p>
+                <p>Datum konání: 4.7.2021 </p>
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <h2>Heipark Tošovice</h2>
+                <p>HEIPARK Tošovice je areál plný zábavy, odpočinku a relaxace uprostřed nádherné přírody Oderských vrchů. Atraktivní místo vhodné pro rodiny s dětmi, školní výlety, firemní a soukromé akce.</p>
             </div>
         </div>
 
         <div class="baz-button">
-            <a href="#" class="baz-btn"> Přejít na událost</a>
+            <a href="https://www.heipark.cz/" class="baz-btn"> Přejít na událost</a>
         </div>
     </div>
 
@@ -109,13 +109,13 @@
         <div class="card">
             <div class="imgBx ">
                 <img src="img/pic2.jpg">
-                <h3 class="moto-name">E-auto Salon v Olomouci</h3>
-                <p>Výstaviště Flóra, Pavilon A a B + venkovní plochy</p>
-                <p>Datum konání: 30.7.-1.8.2021 </p>
+                <h3 class="moto-name">Areál chovatelů</h3>
+                <p>Hradec nad Moravicí</p>
+                <p>Datum konání: 10.7.2021 </p>
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Areál chovatelů</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
@@ -129,19 +129,19 @@
         <div class="card">
             <div class="imgBx ">
                 <img src="img/pic3.jpg">
-                <h3 class="moto-name">Name of event</h3>
-                <p>hudební festival na jižní moravě</p>
-                <p>Datum konání: 11.9.2021 </p>
+                <h3 class="moto-name">Motokrosová trať Litovel</h3>
+                <p>AMK Litovel</p>
+                <p>Datum konání: 14.8.2021 </p>
             </div>
 
             <div class="details">
-                <h2>Name of event</h2>
+                <h2>Motokrosová trať Litovel</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
 
         <div class="baz-button">
-            <a href="#" class="baz-btn"> Přejít na událost</a>
+            <a href="https://www.facebook.com/profile.php?id=100057332054756" class="baz-btn"> Přejít na událost</a>
         </div>
     </div>
 
@@ -149,18 +149,19 @@
         <div class="card">
             <div class="imgBx ">
                 <img src="img/pic4.jpg">
-                <h3 class="moto-name">Enduro CAMS, Zlaté Hory </h3>
-                <p>Datum konání: červenec 2021 </p>
+                <h3 class="moto-name">Nefestival, Heřmanův Městec</h3>
+                <p>Heřmanův Městec</p>
+                <p>Datum konání: 21.8.2021 </p>
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <h2>FESTIVAL NETRADIČNÍCH SPORTŮ</h2>
+                <p>Nabídka sportovních aktivit je skutečně bezmezná, ale pokud hledáš něco fakt spešl, čím bys sis zpříjemnil volnou chvilku, seš rozhodně na správném místě.</p>
             </div>
         </div>
 
         <div class="baz-button">
-            <a href="#" class="baz-btn"> Přejít na událost</a>
+            <a href="https://nefestival.cz/#home" class="baz-btn"> Přejít na událost</a>
         </div>
     </div>
 
@@ -168,18 +169,19 @@
         <div class="card">
             <div class="imgBx">
                 <img src="img/pic5.jpg">
-                <h3 class="moto-name">Name of event</h3>
+                <h3 class="moto-name">2. ročník závodů na elektromotorkách</h3>
+                <p>Heřmanův Městec, Nová Doubrava</p>
                 <p>Datum konání: 1.červenec 2021</p>
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>2. ročník závodů na elektromotorkách</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
 
         <div class="baz-button">
-            <a href="#" class="baz-btn">Prřejít na událost</a>
+            <a href="#" class="baz-btn">Přejít na událost</a>
         </div>
     </div>
 
@@ -192,7 +194,7 @@
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Name of event</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
@@ -211,7 +213,7 @@
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Name of event</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
@@ -230,7 +232,7 @@
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Name of event</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
@@ -263,7 +265,7 @@
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Name of article</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
@@ -282,7 +284,7 @@
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Name of article</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
@@ -301,7 +303,7 @@
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Name of article</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
@@ -320,7 +322,7 @@
             </div>
 
             <div class="details">
-                <h2>Kuberg Challenger</h2>
+                <h2>Name of article</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
