--- a/bazar.html
+++ b/bazar.html
@@ -63,7 +63,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
@@ -81,7 +81,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
@@ -99,7 +99,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
@@ -117,7 +117,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
@@ -135,7 +135,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
@@ -153,7 +153,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
@@ -171,7 +171,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
@@ -189,7 +189,7 @@
         <div class="baz-item">
             <div class="card">
                 <div class="imgBx">
-                    <img src="img/motorky/challenger-white2-preview-2048x.png">
+                    <img src="img/motorky/menu/Kuberg-Challenger.jpg">
                     <h3 class="moto-name">Kuberg Challenger</h3>
                 </div>
 
